# Forge

./: .gitignore  README.md  install.sh  pyproject.toml
agent-kernel/: .env.example  README.md  locks.sh  preflight.sh  run.sh
agent-kernel/cron/: README.md  cron-jobs.json  manage.py  test_manage.py
agent-kernel/logs/: view.sh
apps/forge-cli/: README.md  config.example.toml  pyproject.toml
apps/forge-cli/src/forge_cli/: agents.py  apply_cmd.py  clear_cmd.py  cli.py  cron.py  cron_normalization.py  diff_cmd.py  kill_cmd.py  list_cmd.py  locks.py  paths.py  reset_cmd.py  run_cmd.py  ui.py  unorphan_cmd.py  webhook.py
apps/forge-cli/src/forge_cli/webhook_server/: config.py  main.py  trigger.py
apps/forge-cli/src/forge_cli/webhook_server/_bundled/: config.toml
apps/forge-cli/tests/: test_agents_add.py  test_cron_normalization.py  test_webhook_config.py  test_webhook_wrapper.py
apps/web/: README.md
apps/web/src/app/: globals.css  page.tsx
apps/web/src/app/api/agents/: route.ts
apps/web/src/components/: agent-panel.tsx  events-panel.tsx  issues-panel.tsx  logs-panel.tsx  resizable-layout.tsx
apps/web/src/lib/: agent-config-diff.ts  cron-types.ts  github-labels.ts  issue-locks.ts  issues.ts  log-parser.ts  paths.ts  template-resolution.test.ts  template-resolution.ts
apps/webhook-monitor/: README.md  config.example.toml  package-lock.json  pyproject.toml  tunnel.sh
apps/webhook-monitor/src/forge_webhook/: config.py  main.py  normalize.py  storage.py  trigger.py
apps/webhook-monitor/tests/: test_trigger.py
contexts/: ASSIGNED_ISSUE.md  ISSUES.md  PLANNER.md  README.md  SUPER.md  WORKER.md  WORKSPACE.md
templates/: README.md  planner.example.json  planner.json  super.example.json  super.json  worker.example.json  worker.json
tests/: test_forge_cli_kill.py  test_forge_cli_status.py  test_manage_kill.py  test_run_workspace_lock.py
(+9 files in other folders)
