[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-cli"
version = "0.1.0"
description = "Forge — agent orchestration CLI"
requires-python = ">=3.11"
dependencies = ["click>=8.0", "forge-webhook>=0.1.0"]

[project.scripts]
forge = "forge_cli.cli:main"
